<resources>
    <string name="app_name">Registro</string>
    <string name="nombre">Nombre completo</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripción del contacto</string>
    <string name="siguiente">Siguiente</string>
    <string name="confirmar">Confirmar datos</string>
    <string name="editar">Editar Datos</string>
    <string name="nada"></string>
    <string name="descrip">Descripción</string>
</resources>